[gd_scene load_steps=16 format=3 uid="uid://c43iodsc02gpc"]

[ext_resource type="Script" uid="uid://ksaedy85vutt" path="res://encounter/jig/jig.gd" id="1_mxy8j"]
[ext_resource type="PackedScene" uid="uid://d0u1uysuexi8w" path="res://encounter/jig/jig_direction.tscn" id="2_q6ne0"]
[ext_resource type="PackedScene" uid="uid://c2x5nb8xutljl" path="res://encounter/battle/battle_result.tscn" id="3_s6ojh"]
[ext_resource type="FontFile" uid="uid://bw4edb43exu17" path="res://assets/fonts/PirataOne-Regular.ttf" id="3_scq0y"]
[ext_resource type="AudioStream" uid="uid://1wwv7mp74fqv" path="res://assets/sounds/tam_01.wav" id="4_helyc"]
[ext_resource type="FontFile" uid="uid://nieaekycl7wi" path="res://assets/fonts/SignikaNegative-VariableFont_wght.ttf" id="5_h2mwq"]
[ext_resource type="AudioStream" uid="uid://c7tio66lh0p0y" path="res://assets/sounds/tam_02.wav" id="5_nq7yr"]
[ext_resource type="Shader" uid="uid://dye45fsapwka5" path="res://assets/shaders/lines.gdshader" id="7_sum53"]
[ext_resource type="LabelSettings" uid="uid://u6018fifyd8o" path="res://assets/label.tres" id="8_helyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qubjc"]
bg_color = Color(0, 0, 0, 0.541176)

[sub_resource type="LabelSettings" id="LabelSettings_sum53"]
font = ExtResource("5_h2mwq")
font_size = 24
font_color = Color(0.0156863, 0.768627, 0.85098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sum53"]
bg_color = Color(0.0156863, 0.768627, 0.85098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_6hnvb"]
font = ExtResource("3_scq0y")
font_size = 80
outline_color = Color(0, 0.219608, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwdto"]
bg_color = Color(0, 0.219608, 0.25098, 1)
border_width_right = 1
border_color = Color(0.0156863, 0.768627, 0.85098, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_helyc"]
shader = ExtResource("7_sum53")
shader_parameter/color_one = Color(0, 0.219608, 0.25098, 1)
shader_parameter/color_two = Color(0, 0.283384, 0.322043, 1)
shader_parameter/angle = 20.0
shader_parameter/line_count = 100.0
shader_parameter/blur = 0.0

[node name="Jig" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mxy8j")
jig_direction_scene = ExtResource("2_q6ne0")
result_scene = ExtResource("3_s6ojh")
note_audio = ExtResource("4_helyc")
intro_audio = ExtResource("5_nq7yr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qubjc")

[node name="ResultRoot" type="Control" parent="Panel"]
unique_name_in_owner = true
z_index = 100
layout_mode = 2
anchors_preset = 0
offset_left = 583.0
offset_top = 391.0
offset_right = 583.0
offset_bottom = 391.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 64

[node name="Layout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/Layout"]
layout_mode = 2
text = "Morale Encounter"
label_settings = SubResource("LabelSettings_sum53")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Layout"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sum53")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Layout/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Title" type="Label" parent="MarginContainer/Layout/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Do A Jig!"
label_settings = SubResource("LabelSettings_6hnvb")
horizontal_alignment = 1

[node name="TrackContainer" type="MarginContainer" parent="MarginContainer/Layout"]
custom_minimum_size = Vector2(600, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Track" type="Panel" parent="MarginContainer/Layout/TrackContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gwdto")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Layout/TrackContainer/Track"]
material = SubResource("ShaderMaterial_helyc")
custom_minimum_size = Vector2(40, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 559.0
offset_right = 599.0
grow_vertical = 2

[node name="MovesRoot" type="Control" parent="MarginContainer/Layout/TrackContainer/Track"]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_top = 40.0
offset_bottom = 40.0

[node name="Stats" type="HBoxContainer" parent="MarginContainer/Layout"]
layout_mode = 2

[node name="MoraleValue" type="Label" parent="MarginContainer/Layout/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Morale: 10"
label_settings = ExtResource("8_helyc")

[node name="FatigueValue" type="Label" parent="MarginContainer/Layout/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fatigue: 20"
label_settings = ExtResource("8_helyc")
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
